# products_categories

./: .env.example  README.md  docker-compose.yml  pyproject.toml  setup.cfg
products_app/: manage.py
products_app/api/: filters.py  permissions.py  serializers.py  urls.py  views.py
products_app/products/: admin.py  models.py
products_app/products/migrations/: 0001_initial.py  0002_product_productcategory_product_categories_and_more.py  0003_alter_category_options_alter_product_options_and_more.py
products_app/products_app/: asgi.py  settings.py  urls.py  wsgi.py
